@@ -1,6 +1,6 @@
 dnl Autoconf configure script for GDB, the GNU debugger.
 dnl Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
-dnl 2005, 2006, 2007, 2008, 2009
+dnl 2005, 2006, 2007, 2008, 2009, 2010
 dnl Free Software Foundation, Inc.
 dnl
 dnl This file is part of GDB.
