@@ -1,4 +1,4 @@
-.\" Copyright (C) 1991, 1999 Free Software Foundation, Inc.
+.\" Copyright (C) 1991, 1999, 2010 Free Software Foundation, Inc.
 .\" See section COPYING for conditions for redistribution
 .\" $Id$
 .TH gdb 1 "22may2002" "GNU Tools" "GNU Tools"
@@ -363,7 +363,7 @@ entry in
 Using GDB: A Guide to the GNU Source-Level Debugger\c
 , Richard M. Stallman and Roland H. Pesch, July 1991.
 .SH COPYING
-Copyright (c) 1991 Free Software Foundation, Inc.
+Copyright (c) 1991, 2010 Free Software Foundation, Inc.
 .PP
 Permission is granted to make and distribute verbatim copies of
 this manual provided the copyright notice and this permission notice
